[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Libs/kenney_towerDefense/Models/OBJ format/enemy_ufoPurple.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scenes/Enemies/UfoP.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/alien_spawn.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/explosion.ogg" type="AudioStream" id=4]

[sub_resource type="SphereShape" id=1]
radius = 0.686367

[node name="Spatial" type="Spatial" groups=["enemies"]]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]

[node name="RigidBody" type="RigidBody" parent="."]
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "Enemies"

[connection signal="target_reached" from="NavigationAgent" to="." method="_on_NavigationAgent_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
[connection signal="body_entered" from="RigidBody" to="." method="_on_RigidBody_body_entered"]
[connection signal="input_event" from="RigidBody" to="." method="_on_RigidBody_input_event"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
